Adicionada screenshot do projeto

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Visualização do cartão NFT</title>
-    <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
+    <link rel="shortcut icon" href="src/images/favicon-32x32.png" type="image/x-icon">
 
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="src/css/reset.css">
+    <link rel="stylesheet" href="src/css/style.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,7 +20,7 @@
     <section>
         <div class="ntf-card">
             <a class="img-link" href="#">
-                <img class="img-card" src="images/image-equilibrium.jpg" alt="image Equilibrium NTF">
+                <img class="img-card" src="src/images/image-equilibrium.jpg" alt="image Equilibrium NTF">
             </a>
 
             <a class="title" href="#">
@@ -31,11 +31,11 @@
 
             <div class="info">
                 <div class="container">
-                    <img src="images/icon-ethereum.svg" alt="Icon Ethereum">
+                    <img src="src/images/icon-ethereum.svg" alt="Icon Ethereum">
                     <p class="eth">0.041 ETH</p>
                 </div>
                 <div class="container">
-                    <img src="images/icon-clock.svg" alt="relógio">
+                    <img src="src/images/icon-clock.svg" alt="relógio">
                     <p class="time">3 dias restantes</p>
                 </div>
             </div>
@@ -43,7 +43,7 @@
             <hr>
 
             <div class="container perfil">
-                <img src="images/image-avatar.png" alt="Foto Perfil" class="avatar">
+                <img src="src/images/image-avatar.png" alt="Foto Perfil" class="avatar">
                 <p>Criação de <a href="#">Jules Wyvern</a></p>
             </div>
         </div>
@@ -52,8 +52,8 @@
     <footer>
         <div class="attribution">
             Challenge by
-            <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-            Coded by <a href="#">Victor Parizio</a>.
+            <a href="https://www.frontendmentor.io/profile/VictorParizio" target="_blank">Frontend Mentor</a>.
+            Coded by <a href="https://www.linkedin.com/in/victorpariziobackend/" target="_blank">Victor Parizio</a>.
         </div>
     </footer>
 </body>
